gloo-all/resources/gloo/argocd-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'gloo-argocd.demo.ceposta.solo.io'
    routes:          
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: argocd-argo-cd-argocd-server-80
            namespace: gloo-system
