gloo-all/resources/gloo/auth-gloo-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: auth-gloo-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: ceposta-auth-demo-dns
      namespace: gloo-system
    sniDomains:
    - ceposta-auth-demo.solo.io      
  virtualHost:
    domains:
    - 'ceposta-auth-demo.solo.io'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: gloo-system-dex-32000
            namespace: gloo-system
