gloo-all/resources/gloo/devportal-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: devportal-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'ceposta-devportal-demo.solo.io'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: dev-portal-admin-server-8080  
            namespace: gloo-system
