gloo-all/resources/gloo/glooui-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: glooui-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'ceposta-glooui-demo.solo.io'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: gloo-system-apiserver-ui-8080
            namespace: gloo-system
