gloo-all/resources/gloo/gogs-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: gogs-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'gloo-gogs.demo.ceposta.solo.io'
    routes:          
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: gogs-gogs-80
            namespace: gloo-system
