gloo-all/resources/gloo/petclinic-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: gloo-petclinic-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'gloo-petclinic.demo.ceposta.solo.io'
    routes:          
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-petclinic-80 
            namespace: gloo-system
